apps/safeqbit-local-hq/netbox/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netbox
  labels:
    app.kubernetes.io/name: netbox
    app.kubernetes.io/managed-by: flux
    cluster: safeqbit-local-hq
    backup.policy/velero: biweekly
